feat: template experiment code implemented

--- a/template_experiments/rte-boy.ipynb
+++ b/template_experiments/rte-boy.ipynb
@@ -1,16 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "87a6eaa2",
-   "metadata": {},
-   "source": [
-    "# MNLI"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "737c2d8d",
    "metadata": {},
    "outputs": [],
@@ -29,84 +21,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "id": "2cf11f84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = AutoTokenizer.from_pretrained(\"textattack/bert-base-uncased-MNLI\")\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(\"textattack/bert-base-uncased-MNLI\")\n",
-    "mnli = pipeline(\n",
+    "boy_tokenizer = AutoTokenizer.from_pretrained(\"boychaboy/rte_bert-base\")\n",
+    "boy_model = AutoModelForSequenceClassification.from_pretrained(\"boychaboy/rte_bert-base\")\n",
+    "rte = pipeline(\n",
     "    \"sentiment-analysis\",\n",
-    "    tokenizer=tokenizer,\n",
-    "    model=model,\n",
-    "    return_all_scores=True\n",
+    "    tokenizer=boy_tokenizer,\n",
+    "    model=boy_model\n",
     ")"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ad75f2d7",
-   "metadata": {},
-   "source": [
-    "### roberta-base"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "03ed8af4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at textattack/roberta-base-MNLI were not used when initializing RobertaForSequenceClassification: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
-      "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
-    }
-   ],
-   "source": [
-    "roberta_tokenizer = AutoTokenizer.from_pretrained(\"textattack/roberta-base-MNLI\")\n",
-    "roberta_model = AutoModelForSequenceClassification.from_pretrained(\"textattack/roberta-base-MNLI\")\n",
-    "mnli_roberta = pipeline(\n",
-    "    \"sentiment-analysis\",\n",
-    "    tokenizer=roberta_tokenizer,\n",
-    "    model=roberta_model,\n",
-    "    return_all_scores=True\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "556f608a",
-   "metadata": {},
-   "source": [
-    "### distilbert-base"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "604ae2f5",
+   "execution_count": 15,
+   "id": "7f89766a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "distilbert_tokenizer = AutoTokenizer.from_pretrained(\"textattack/distilbert-base-uncased-MNLI\")\n",
-    "distilbert_model = AutoModelForSequenceClassification.from_pretrained(\"textattack/distilbert-base-uncased-MNLI\")\n",
-    "mnli_distilbert = pipeline(\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"textattack/bert-base-uncased-RTE\")\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(\"textattack/bert-base-uncased-RTE\")\n",
+    "rte = pipeline(\n",
     "    \"sentiment-analysis\",\n",
-    "    tokenizer=distilbert_tokenizer,\n",
-    "    model=distilbert_model,\n",
-    "    return_all_scores=True\n",
+    "    tokenizer=tokenizer,\n",
+    "    model=model\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9dd62a97",
    "metadata": {},
    "outputs": [],
@@ -126,30 +73,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "id": "5c8a992b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mnli_result(sents, outputs):\n",
+    "def rte_result(sents, outputs):\n",
     "    id2label = {\n",
-    "        'LABEL_0':'contradiction',\n",
-    "        'LABEL_1':'neutral',\n",
-    "        'LABEL_2':'entailment'\n",
+    "        'LABEL_0':'entailment',\n",
+    "        'LABEL_1':'non-entailment'\n",
     "    }\n",
     "    for s, o in zip(sents, outputs):\n",
     "        s = s.split('[SEP]')\n",
     "        text = s[0]\n",
     "        hypo = s[1]\n",
-    "        print(f\"text : {s[0]}\\nhypo : {s[1]}\")\n",
-    "        for i in o:\n",
-    "            print(f\"{id2label[i['label']]} : {i['score']:.2f}\")\n",
-    "        print()"
+    "        print(f\"text : {s[0]}\\nhypo : {s[1]}\\n{id2label[o['label']]}({o['score']:.2f})\\n\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b26e042d",
+   "id": "7fd1995f",
    "metadata": {},
    "source": [
     "## 1. bert-base-uncased"
@@ -165,9 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "id": "03a3d03c",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -175,73 +120,53 @@
      "text": [
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 0.21\n",
-      "neutral : 0.69\n",
-      "entailment : 0.10\n",
+      "entailment(0.72)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 0.21\n",
-      "neutral : 0.69\n",
-      "entailment : 0.10\n",
+      "entailment(0.72)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 0.21\n",
-      "neutral : 0.69\n",
-      "entailment : 0.10\n",
+      "entailment(0.72)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 0.21\n",
-      "neutral : 0.69\n",
-      "entailment : 0.10\n",
+      "entailment(0.72)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 0.21\n",
-      "neutral : 0.69\n",
-      "entailment : 0.10\n",
+      "entailment(0.72)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 0.21\n",
-      "neutral : 0.69\n",
-      "entailment : 0.10\n",
+      "entailment(0.72)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 0.21\n",
-      "neutral : 0.69\n",
-      "entailment : 0.10\n",
+      "entailment(0.72)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 0.21\n",
-      "neutral : 0.69\n",
-      "entailment : 0.10\n",
+      "entailment(0.72)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 0.21\n",
-      "neutral : 0.69\n",
-      "entailment : 0.10\n",
+      "entailment(0.72)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 0.21\n",
-      "neutral : 0.69\n",
-      "entailment : 0.10\n",
+      "entailment(0.72)\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "filename = 'mnli_sample.txt'\n",
+    "filename = 'rte_sample.txt'\n",
     "\n",
     "sents = load_sentences(filename)\n",
-    "outputs = mnli(sents)\n",
-    "mnli_result(sents, outputs)"
+    "outputs = rte(sents)\n",
+    "rte_result(sents, outputs)"
    ]
   },
   {
@@ -254,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "id": "03179384",
    "metadata": {
     "scrolled": true
@@ -265,25 +190,23 @@
      "output_type": "stream",
      "text": [
       "text : This is a test sentence.\n",
-      "hypo : This is a test sentence.\n",
-      "contradiction : 0.07\n",
-      "neutral : 0.79\n",
-      "entailment : 0.14\n",
+      "hypo : This is a broken computer.\n",
+      "entailment(0.62)\n",
       "\n"
      ]
     }
    ],
    "source": [
     "text = \"This is a test sentence.\"\n",
-    "hypo = \"This is a test sentence.\"\n",
+    "hypo = \"This is a broken computer.\"\n",
     "\n",
     "sent = [text+'[SEP]'+hypo]\n",
-    "mnli_result(sent, mnli(sent))"
+    "rte_result(sent, rte(sent))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b72dc5cd",
+   "id": "63a4d170",
    "metadata": {},
    "source": [
     "## 2. roberta-base"
@@ -291,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "108cdbe2",
+   "id": "5bf62539",
    "metadata": {},
    "source": [
     "### test with a file"
@@ -299,8 +222,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "2a307288",
+   "execution_count": 9,
+   "id": "a03b50bb",
    "metadata": {},
    "outputs": [
     {
@@ -309,78 +232,58 @@
      "text": [
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 1.00\n",
-      "neutral : 0.00\n",
-      "entailment : 0.00\n",
+      "non-entailment(0.89)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 1.00\n",
-      "neutral : 0.00\n",
-      "entailment : 0.00\n",
+      "non-entailment(0.89)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 1.00\n",
-      "neutral : 0.00\n",
-      "entailment : 0.00\n",
+      "non-entailment(0.89)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 1.00\n",
-      "neutral : 0.00\n",
-      "entailment : 0.00\n",
+      "non-entailment(0.89)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 1.00\n",
-      "neutral : 0.00\n",
-      "entailment : 0.00\n",
+      "non-entailment(0.89)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 1.00\n",
-      "neutral : 0.00\n",
-      "entailment : 0.00\n",
+      "non-entailment(0.89)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 1.00\n",
-      "neutral : 0.00\n",
-      "entailment : 0.00\n",
+      "non-entailment(0.89)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 1.00\n",
-      "neutral : 0.00\n",
-      "entailment : 0.00\n",
+      "non-entailment(0.89)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 1.00\n",
-      "neutral : 0.00\n",
-      "entailment : 0.00\n",
+      "non-entailment(0.89)\n",
       "\n",
       "text : This is a test sentence.\n",
       "hypo : This is not a test sentence.\n",
-      "contradiction : 1.00\n",
-      "neutral : 0.00\n",
-      "entailment : 0.00\n",
+      "non-entailment(0.89)\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "filename = 'mnli_sample.txt'\n",
+    "filename = 'rte_sample.txt'\n",
     "\n",
     "sents = load_sentences(filename)\n",
-    "outputs = mnli_roberta(sents)\n",
-    "mnli_result(sents, outputs)"
+    "outputs = rte_roberta(sents)\n",
+    "rte_result(sents, outputs)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "062cae24",
+   "id": "ced1e21c",
    "metadata": {},
    "source": [
     "### test with a sentence"
@@ -388,35 +291,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "54849e87",
+   "execution_count": 25,
+   "id": "bcf2e459",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text : martha is a doctor.\n",
-      "hypo : either martha or david is a doctor.\n",
-      "contradiction : 0.05\n",
-      "neutral : 0.92\n",
-      "entailment : 0.03\n",
+      "text : This is a sentence.\n",
+      "hypo : This is not a sentence.\n",
+      "non-entailment(0.94)\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "text = \"martha is a doctor.\"\n",
-    "hypo = \"either martha or david is a doctor.\"\n",
+    "text = \"This is a sentence.\"\n",
+    "hypo = \"This is not a sentence.\"\n",
     "\n",
     "sent = [text+'[SEP]'+hypo]\n",
-    "mnli_result(sent, mnli_roberta(sent))"
+    "rte_result(sent, rte_roberta(sent))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dace56c",
+   "metadata": {},
+   "source": [
+    "## 3. distilbert-base"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d161b6a",
+   "metadata": {},
+   "source": [
+    "### test with a file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5b6b6cd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "text : This is a test sentence.\n",
+      "hypo : This is not a test sentence.\n",
+      "entailment(0.88)\n",
+      "\n",
+      "text : This is a test sentence.\n",
+      "hypo : This is not a test sentence.\n",
+      "entailment(0.88)\n",
+      "\n",
+      "text : This is a test sentence.\n",
+      "hypo : This is not a test sentence.\n",
+      "entailment(0.88)\n",
+      "\n",
+      "text : This is a test sentence.\n",
+      "hypo : This is not a test sentence.\n",
+      "entailment(0.88)\n",
+      "\n",
+      "text : This is a test sentence.\n",
+      "hypo : This is not a test sentence.\n",
+      "entailment(0.88)\n",
+      "\n",
+      "text : This is a test sentence.\n",
+      "hypo : This is not a test sentence.\n",
+      "entailment(0.88)\n",
+      "\n",
+      "text : This is a test sentence.\n",
+      "hypo : This is not a test sentence.\n",
+      "entailment(0.88)\n",
+      "\n",
+      "text : This is a test sentence.\n",
+      "hypo : This is not a test sentence.\n",
+      "entailment(0.88)\n",
+      "\n",
+      "text : This is a test sentence.\n",
+      "hypo : This is not a test sentence.\n",
+      "entailment(0.88)\n",
+      "\n",
+      "text : This is a test sentence.\n",
+      "hypo : This is not a test sentence.\n",
+      "entailment(0.88)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename = 'rte_sample.txt'\n",
+    "\n",
+    "sents = load_sentences(filename)\n",
+    "outputs = rte_distilbert(sents)\n",
+    "rte_result(sents, outputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bb5ea00",
+   "metadata": {},
+   "source": [
+    "### test with a sentence"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e80993b",
+   "id": "ec0086b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"This is a test sentence.\"\n",
+    "hypo = \"This is test.\"\n",
+    "\n",
+    "sent = [text+'[SEP]'+hypo]\n",
+    "rte_result(sent, 3(sent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fd91ad0",
    "metadata": {},
    "outputs": [],
    "source": []
