--- a/template_experiments/rte.ipynb
+++ b/template_experiments/rte.ipynb
@@ -23,120 +23,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "2cf11f84",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6409849610994ee9aae2c733a65e8327",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=515.0, style=ProgressStyle(description_…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aba58b5a43d249088bbda927a870c7f4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=231508.0, style=ProgressStyle(descripti…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2107040fc9e54a86a5caa58d62c01847",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=112.0, style=ProgressStyle(description_…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "994046b03869401bb58a191b98d4ab43",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=48.0, style=ProgressStyle(description_w…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4231d872b54245358b2f19ca72073cdc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=437985387.0, style=ProgressStyle(descri…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(\"textattack/bert-base-uncased-RTE\")\n",
     "model = AutoModelForSequenceClassification.from_pretrained(\"textattack/bert-base-uncased-RTE\")\n",
     "rte = pipeline(\n",
+    "    \n",
     "    \"sentiment-analysis\",\n",
     "    tokenizer=tokenizer,\n",
     "    model=model\n",
@@ -153,11 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "7ef3dbf8",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -189,118 +80,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "a3e5fb11",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "efb33afad094425788f26093b97f1a95",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=489.0, style=ProgressStyle(description_…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "054e8bc49e6048c58496830f34a40be9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=231508.0, style=ProgressStyle(descripti…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "911bdba6ba6a4bcb83c68f1062ae5472",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=112.0, style=ProgressStyle(description_…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8016ceec6844eecafd693c3ea3ae096",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=48.0, style=ProgressStyle(description_w…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3c5a7ae1f124dcaa4a540c591d92c88",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=267845150.0, style=ProgressStyle(descri…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "distilbert_tokenizer = AutoTokenizer.from_pretrained(\"textattack/distilbert-base-uncased-RTE\")\n",
     "distilbert_model = AutoModelForSequenceClassification.from_pretrained(\"textattack/distilbert-base-uncased-RTE\")\n",
@@ -313,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9dd62a97",
    "metadata": {},
    "outputs": [],
@@ -333,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5c8a992b",
    "metadata": {},
    "outputs": [],
@@ -368,11 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "03a3d03c",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -439,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "03179384",
    "metadata": {
     "scrolled": true
@@ -450,15 +231,15 @@
      "output_type": "stream",
      "text": [
       "text : This is a test sentence.\n",
-      "hypo : This is test.\n",
-      "entailment(0.61)\n",
+      "hypo : This is not a test.\n",
+      "entailment(0.68)\n",
       "\n"
      ]
     }
    ],
    "source": [
     "text = \"This is a test sentence.\"\n",
-    "hypo = \"This is test.\"\n",
+    "hypo = \"This is not a test.\"\n",
     "\n",
     "sent = [text+'[SEP]'+hypo]\n",
     "rte_result(sent, rte(sent))"
@@ -482,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "a03b50bb",
    "metadata": {},
    "outputs": [
@@ -551,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "bcf2e459",
    "metadata": {},
    "outputs": [
@@ -559,16 +340,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text : This is a test sentence.\n",
-      "hypo : This is test.\n",
-      "entailment(0.84)\n",
+      "text : The people are fat and unathletic.\n",
+      "hypo : they are european people.\n",
+      "non-entailment(0.97)\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "text = \"This is a test sentence.\"\n",
-    "hypo = \"This is test.\"\n",
+    "text = \"The people are fat and unathletic.\"\n",
+    "hypo = \"they are european people.\"\n",
     "\n",
     "sent = [text+'[SEP]'+hypo]\n",
     "rte_result(sent, rte_roberta(sent))"
@@ -592,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "5b6b6cd0",
    "metadata": {},
    "outputs": [
@@ -661,21 +442,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ec0086b3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "text : This is a test sentence.\n",
-      "hypo : This is test.\n",
-      "entailment(0.90)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "text = \"This is a test sentence.\"\n",
     "hypo = \"This is test.\"\n",
