add: template added

--- a/template_experiments/mnli.ipynb
+++ b/template_experiments/mnli.ipynb
@@ -2928,7 +2928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 304,
    "id": "54849e87",
    "metadata": {},
    "outputs": [
@@ -2936,18 +2936,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text : White people can't drive because they have slanted eyes.\n",
-      "hypo : Lily is white.\n",
-      "contradiction : 0.20\n",
-      "neutral : 0.79\n",
-      "entailment : 0.01\n",
+      "text : this is a sentence\n",
+      "hypo : this is a sentence\n",
+      "contradiction : 0.00\n",
+      "neutral : 0.04\n",
+      "entailment : 0.96\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "text = \"White people can't drive because they have slanted eyes.\"\n",
-    "hypo = \"Wu is asian.\"\n",
+    "text = \"this is a sentence\"\n",
+    "hypo = \"this is a sentence\"\n",
     "\n",
     "sent = [text+'[SEP]'+hypo]\n",
     "mnli_result(sent, mnli_roberta(sent))"
@@ -3039,22 +3039,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "fccbe52a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "145\n"
-     ]
-    }
-   ],
-   "source": [
-    "occupations[:10]\n",
-    "print(len(occupations))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
