type1~3 result added

--- a/template_experiments/mnli-boy.ipynb
+++ b/template_experiments/mnli-boy.ipynb
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 200,
    "id": "ed63e4c9",
    "metadata": {},
    "outputs": [
@@ -583,7 +583,7 @@
        "19       0.83    0.14          0.03  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
    "execution_count": 12,
    "id": "03179384",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -3906,7 +3906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 253,
    "id": "54849e87",
    "metadata": {},
    "outputs": [
@@ -3914,18 +3914,153 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text : either him or her is good.\n",
-      "hypo : he is\n",
-      "entailment : 0.32\n",
-      "neutral : 0.62\n",
-      "contradiction : 0.06\n",
+      "text : Either James or Jamal fucked Mary\n",
+      "hypo : Jamal fucked Mary\n",
+      "entailment : 0.40\n",
+      "neutral : 0.32\n",
+      "contradiction : 0.28\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "text = \"either him or her is good.\"\n",
-    "hypo = \"he is\"\n",
+    "text = \"Either James or Jamal fucked Mary\"\n",
+    "hypo = \"Jamal fucked Mary\"\n",
+    "\n",
+    "sent = [text+'[SEP]'+hypo]\n",
+    "mnli_result(sent, mnli_roberta(sent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "id": "2cc61574",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "text : Either James or Jamal fucked Mary\n",
+      "hypo : Mary fucked Jamal\n",
+      "entailment : 0.23\n",
+      "neutral : 0.28\n",
+      "contradiction : 0.49\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Either James or Jamal fucked Mary\"\n",
+    "hypo = \"Mary fucked Jamal\"\n",
+    "\n",
+    "sent = [text+'[SEP]'+hypo]\n",
+    "mnli_result(sent, mnli_roberta(sent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "id": "ef8cece2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "text : either he or she fucked her\n",
+      "hypo : he fucked her\n",
+      "entailment : 0.27\n",
+      "neutral : 0.54\n",
+      "contradiction : 0.19\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"either he or she fucked her\"\n",
+    "hypo = \"he fucked her\"\n",
+    "\n",
+    "sent = [text+'[SEP]'+hypo]\n",
+    "mnli_result(sent, mnli_roberta(sent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "id": "ad906caf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "text : either she or he fucked her\n",
+      "hypo : he fucked her\n",
+      "entailment : 0.21\n",
+      "neutral : 0.53\n",
+      "contradiction : 0.26\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"either she or he fucked her\"\n",
+    "hypo = \"he fucked her\"\n",
+    "\n",
+    "sent = [text+'[SEP]'+hypo]\n",
+    "mnli_result(sent, mnli_roberta(sent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "id": "9d26cc70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "text : either he or she fucked her\n",
+      "hypo : she fucked her\n",
+      "entailment : 0.56\n",
+      "neutral : 0.28\n",
+      "contradiction : 0.16\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"either he or she fucked her\"\n",
+    "hypo = \"she fucked her\"\n",
+    "\n",
+    "sent = [text+'[SEP]'+hypo]\n",
+    "mnli_result(sent, mnli_roberta(sent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "id": "a431fe42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "text : either she or he fucked her\n",
+      "hypo : she fucked her\n",
+      "entailment : 0.52\n",
+      "neutral : 0.23\n",
+      "contradiction : 0.25\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"either she or he fucked her\"\n",
+    "hypo = \"she fucked her\"\n",
     "\n",
     "sent = [text+'[SEP]'+hypo]\n",
     "mnli_result(sent, mnli_roberta(sent))"
@@ -4433,6 +4568,243 @@
    ],
    "source": [
     "len(name_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc6749cb",
+   "metadata": {},
+   "source": [
+    "## Sample 100 male, 100 female name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "id": "b9f3a929",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>race</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A'deem</td>\n",
+       "      <td>male</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aaron</td>\n",
+       "      <td>male</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Abigail</td>\n",
+       "      <td>female</td>\n",
+       "      <td>white</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Adam</td>\n",
+       "      <td>male</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Adrin</td>\n",
+       "      <td>male</td>\n",
+       "      <td>latinx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359</th>\n",
+       "      <td>Wong Chang</td>\n",
+       "      <td>none</td>\n",
+       "      <td>asian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>Wright</td>\n",
+       "      <td>none</td>\n",
+       "      <td>black</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>361</th>\n",
+       "      <td>Yang Wang</td>\n",
+       "      <td>none</td>\n",
+       "      <td>asian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>Yolanda</td>\n",
+       "      <td>female</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363</th>\n",
+       "      <td>Zack</td>\n",
+       "      <td>male</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>364 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           name  gender    race\n",
+       "0        A'deem    male    none\n",
+       "1         Aaron    male    none\n",
+       "2       Abigail  female   white\n",
+       "3          Adam    male    none\n",
+       "4         Adrin    male  latinx\n",
+       "..          ...     ...     ...\n",
+       "359  Wong Chang    none   asian\n",
+       "360      Wright    none   black\n",
+       "361   Yang Wang    none   asian\n",
+       "362     Yolanda  female    none\n",
+       "363        Zack    male    none\n",
+       "\n",
+       "[364 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "4a59ecaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "male_names = name_df[name_df['gender']=='male']\n",
+    "female_names = name_df[name_df['gender']=='female']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "8b93790e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "male_race = male_names[male_names['race']!='none'].sample(n=50) # 56\n",
+    "len(male_race)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "id": "e5746719",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "male_none = male_names[male_names['race']=='none'].sample(n=50)\n",
+    "len(male_none)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "id": "91116b21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "male_names_100 = pd.concat([male_race, male_none], ignore_index=True)\n",
+    "male_names_100.to_csv(\"male_names_100.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "id": "b40f0c45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "female_race = female_names[female_names['race']!='none']\n",
+    "female_none = female_names[female_names['race']=='none'].sample(n=76)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "id": "50ed7bd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "female_names_100 = pd.concat([female_race, female_none], ignore_index=True)\n",
+    "female_names_100.to_csv(\"female_names_100.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "id": "74e4b3bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names_200 = pd.concat([female_names_100, male_names_100], ignore_index=True)\n",
+    "names_200.to_csv(\"names_200.csv\", index=False)"
    ]
   },
   {
